--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
       - BROKER_URL=amqp://guest:guest@rabbitmq:5672/
-      - DJANGO_SETTINGS_MODULE=usaid_nepal_geonode.settings
+      - DJANGO_SETTINGS_MODULE=ftf_geonode.settings
       - GEOSERVER_BASE_URL="http://geoserver:8080/geoserver/"
       - ALLOWED_HOSTS=['django',]
 
@@ -29,12 +29,12 @@ services:
       - rabbitmq
       - postgres
       - elasticsearch
-    command: celery worker --app=usaid_nepal_geonode.celeryapp:app -B -l INFO
+    command: celery worker --app=ftf_geonode.celeryapp:app -B -l INFO
     environment:
       - DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
       - BROKER_URL=amqp://guest:guest@rabbitmq:5672/
       - GEOSERVER_BASE_URL="http://geoserver:8080/geoserver/"
-      - DJANGO_SETTINGS_MODULE=usaid_nepal_geonode.settings
+      - DJANGO_SETTINGS_MODULE=ftf_geonode.settings
       - ALLOWED_HOSTS=['django',]
       - C_FORCE_ROOT=1
 
