--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 five==0.4.0
 django-geonode-client==0.0.22
 django-cors-headers==1.3.1
-geonode==2.5.15
+git+git://github.com/ftf-geonode/geonode.git@ftf
 pymemcache
