--- a/ftf_geonode/templates/dashboards/viewer.yml
+++ b/ftf_geonode/templates/dashboards/viewer.yml
@@ -1,7 +1,7 @@
 {% verbatim %}
 ---
 
-title: FTF GeoNode
+title: "Viewer - Data Driven Farming GeoNode"
 view:
   baselayer: osm
   featurelayers:
@@ -11,6 +11,7 @@ view:
     - cities
     - towns
     - villages
+    - nepal_ftf_zoi
 #    - wld_poi_warehouses_wfp
   latitude: 28.183
   longitude: 84.853
@@ -29,6 +30,7 @@ renderlayers:
   - cities
   - towns
   - villages
+  - nepal_ftf_zoi
   - osm
 baselayers:
   - id: osm
@@ -41,6 +43,35 @@ baselayers:
     tile:
       url: https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png
 featurelayers:
+  - id: nepal_ftf_zoi
+    type: GeoJSON
+    title: Nepal Feed the Future Zones of Interest
+    description: Nepal Feed the Future Zones of Interest
+    source:
+      name: "FTF"
+      attribution: "FTF GeoNode"
+      site: "FTF GeoNode"
+    wms:
+      version: "1.1.1"
+      layers: ["geonode:nepal_ftf_zoi"]
+      styles: []
+      format: 'image/png'
+      transparent: true
+      buffer: 256
+      url: "/geoserver/geonode/wms"
+    wfs:
+      version: "1.0.0"  # Needs to 1.0.0 or returns bad results for some reason.
+      url: "/geoserver/wfs"
+      geometry: shape
+    popup:
+      - title: "FTF Zone: {{ feature.attributes.NAME_0 }}"
+        panes:
+          - id: popup_overview
+            tab: {label: Overview }
+            fields:
+              - { "attribute": "NAME_0", "label": "Name_0", "value": "{{ feature.attributes.NAME_0 }}" }
+              - { "attribute": NAME_1, "label": "NAME_1", "value": "{{ feature.attributes.NAME_1 }}" }
+              - { "attribute": NAME_2, "label": "NAME_2", "value": "{{ feature.attributes.NAME_2 }}" }
 #  - id: wld_poi_warehouses_wfp
 #    type: WMS
 #    title: Nepal Feed the Future Zones of Interest
@@ -278,14 +309,14 @@ featurelayers:
         panes: []
 navbars:
   - id: layers
-    placement: top
+    placement: right
     intents:
       - name: toggleFeatureLayer
         properties: [{ name: layer, value: "{{ tab.value }}" }]
     css:
       properties:
-        - { name: left, value: 5% }
-        - { name: right, value: 5% }
+        #- { name: left, value: 5% }
+        #- { name: right, value: 5% }
         - { name: height, value: 1rem }
     tabs:
       - title: ""
@@ -293,14 +324,14 @@ navbars:
         tooltip: { placement: bottom, content: "aerodromes_point" }
         css:
           properties:
-            - { name: font-size, value: 2rem }
+            - { name: font-size, value: 1.4rem }
             - { name: font-family, value: FontAwesome }
       - title: ""
         value: banks
         tooltip: { placement: bottom, content: "banks" }
         css:
           properties:
-            - { name: font-size, value: 2rem }
+            - { name: font-size, value: 1.4rem }
             - { name: font-family, value: FontAwesome }
       - title: ""
         value: medical_point
