--- a/ftf_geonode/templates/layer_modal_download_links.yml
+++ b/ftf_geonode/templates/layer_modal_download_links.yml
@@ -1,10 +1,19 @@
 ---
-  
+
+{% if storeType == "dataStore" %}
 - title: Spreadsheet
   links:
     - CSV
     - Excel
 - title: Spatial
   links:
+    - GeoTIFF
     - Zipped Shapefile
     - GeoJSON
+    - KML
+{% elif storeType == "coverageStore" %}
+- title: Spatial
+  links:
+    - GeoTIFF
+    - KML
+{% endif %}
