--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ five==0.4.0
 django-geonode-client==0.0.22
 django-cors-headers==1.3.1
 git+git://github.com/ftf-geonode/geonode.git@ftf
+django-floppyforms==1.6.1
 pymemcache
 defusedxml
-django-floppyforms
+markdown
